# RGB_Extractor

./: CMakeLists.txt  README.md  main.cpp
